Fork(352800), fix the entrust reward dividend problem Optimized the display of PC version foundation rewards and commissioned node name data

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -38,6 +38,7 @@ BITCOIN_TESTS =\
   test/crp_tests.cpp \
   test/scriptex_tests.cpp \
   test/entrustment_impl_tests.cpp \
+  test/entrustment_tests.cpp \
   test/contract_call_script_tests.cpp \
   test/bip39_tests.cpp \
   test/entrust_reward_tests.cpp \
